--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -9,28 +9,27 @@ PerM uses both a configuration file and command line options. The input and conf
 
 == Command Line Options ==  
 To use command line, type PerM with the args in the order.
-(1) reference file (2) read set (3) mismatch threshold (4) options flags
+(1) reference file (2) read set (3) mismatch threshold (4) option flags
 
 For example:
  * {{{./PerM Ref.fasta Reads.fasta 5 -A -s}}}
  * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt 2 -E -m}}}
 PerM chooses different ways to parse input files based on their ext names.
-The following are the short description for each augments. 
- # Reference file should be a .fasta or .fa file. Otherwise, PerM assumes it is a file listed paths for many fasta file, with one path in each line.
- # Reads file should be in .fasta, .fastq, .csfasta or .prb format. PerM parses the file according to it's ext file name. Otherwise, PerM assumes it is a file listed a path to other read files in each line.
- # Mismatch threshold could be 2 to 5. For reads over 64, PerM allows double the number of mismatches threshold.
- # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved index. If not found, reconstruct the index. The following option flag can changed the default setting.
-It will try to use the saved index. If not found, reconstruct the index.
--A     Output all alignments within the mismatch threshold.
--E     Output only the unique mapped reads.
--s     Save the reference index to acclerate the mapping in the future.
--m     Create the reference index, without reused the saved index.
--T L, where L is an integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
+The following are the short description for each arguments:
+ # The reference file should be a .fasta or .fa file. Otherwise, PerM assumes it is a file listed paths for many fasta files, with one path in each line.
+ # The reads file should be in the .fasta, .fastq, .csfasta or .prb format. PerM parses a file according to it's ext file name. Otherwise, PerM assumes it is a file listed paths for many read files, with one path in each line.
+ # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
+ # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
+ * -A     Output all alignments within the mismatch threshold.
+ * -E     Output only the unique mapped reads.
+ * -s     Save the reference index to accelerate the mapping in the future.
+ * -m     Create the reference index, without reusing the saved index.
+ * -T L, where L is an integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
 
 Ex: {{{./PerM ref.fasta reads.csfasta 3 -E -s -T 32}}}
+In the example, PerM will report only the uniquely mapped reads within three mismatches in their first 32 bases. It will save the indexes for future mappings. 
 
-will reports only uniquely mapped reads within three mismatches in their first 32 bases and saved the index for future mapping. The following is some detail description for each argument.
-  
+The following is some detail description for each argument. 
 ====Reference Files====
 PerM takes single or multiple fasta files as the reference. If there are multiple fasta files, make a list file, say {{{HumanGenome.txt}}}, with each fasta file name in a row, as the command line input example as the above. PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", as input which typically is a transcripts or contigs. The first word after ">" will be used as a "Sequence Name", which will be showed with the corresponding alignments. Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N" after 0.0.6 version. Note PerM concatenates the file names in the list to generate the file name for index. Limited by OS the system, the index file name could be too long to be saved. 
 
