--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -72,11 +72,14 @@ The genome-preprocessing version saves the reference index by default. It requir
 The mapping results are printed in a `*`.mapping file which is named by concatenating the input files. Each line is the result of the best mapping (fewest mismatches). The info in each line is read in the following order separated by tab:
   * Read Tag (Extract from the previous line of the reads input file. If the tag is missing, a fake tag will be used.)  
   * The read sequence. For SOLiD reads, the first base from the agent (not in the reference) is eliminated from display. The first color signal is translated into a base for display.
-  * Chromosome ID (begins at 0 and numbered according to the order in the reference list)
-  * Chromosome Locus ID (the first position in each chromosome begins at 0) 
-  * The mapped reference sequence. For SOLiD reads, this region is translated into colors for comparison to the read.
+  * Chromosome Name or ID (begins at 0 and numbered according to the order in the reference list)
+  * Chromosome Locus ID, the most left position on the reference. (Each chromosome has indexes starts from 0). 
+  * The mapped reference sequence. (reversed-complemented if orientation is -). For SOLiD reads, this region is translated into colors for comparison to the read.
   * Positive (forward) or negative (backward) strand that the reads mapped to.
-  * Number of mismatches in the mapping or the sum of aligned quality scores if available. 
+  * Number of mismatches or the mismatches score (the sum of quality scores in the mis-matched bases) if available. 
+  * Number of mappings that this read aligns to, including the current one. 
+  * Reads qualities, numbers printed in characters with a Phred score shift (33).
+  * Indicated SNP types (For SOLiD reads only)
 
 Changes are expected in the near future for I/O and options standardization with other mapping programs, especially Applied Biosystems pipeline.
 
