Edited wiki page through web user interface.

--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -17,7 +17,7 @@ For example:
 PerM chooses different ways to parse input files based on their ext names.
 The following are the short description for each arguments:
  # The reference file should be a .fasta or .fa file. Otherwise, PerM assumes it is a file listed paths for many fasta files, with one path in each line.
- # The reads file should be in the .fasta, .fastq, .csfasta or .prb format. PerM parses a file according to it's ext file name. Otherwise, PerM assumes it is a file listed paths for many read files, with one path in each line.
+ # The reads file should be in the .fasta, .fastq, .csfasta or .prb format. PerM parses a file according to it's ext file name. For unknown ext names, PerM assumes a file listing paths for many read files, with one path in each line.
  # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
  # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
  * -A     Output all alignments within the mismatch threshold.
