--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -16,8 +16,8 @@ For example:
  * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt 2 -E }}}
 PerM chooses different ways to parse input files based on their ext names.
 The following are the short description for each arguments:
- # The reference file should be a .fasta or .fa file. Otherwise, PerM assumes it is a file listed paths for many fasta files, with one path in each line.
- # The reads file should be in the .fasta, .fastq, .csfasta or .prb format. PerM parses a file according to it's ext file name. For unknown ext names, PerM assumes a file listing paths for many read files, with one path in each line.
+ # The reference file should be a .fasta or .fa file. If there are multiple refernce list, ex: chr1.fa to chrY.fa, list them in a *.txt file. PerM parses a file according to it's ext file name.
+ # The reads file should be in the .fasta, .fastq, .csfasta or .prb format. PerM parses a file according to it's ext file name. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
  # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
  # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
  * -A     Output all alignments within the mismatch threshold.
@@ -26,8 +26,8 @@ The following are the short description for each arguments:
  * -m     Create the reference index, without reusing the saved index.
  * -u     Print the fasta file of those unmapped reads to a file *miss.fa.
  * -T L, where L is an integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
-
 Ex: {{{./PerM ref.fasta reads.csfasta 3 -E -s -T 32}}}
+ * -O P, where P is the prefix of the output file for single read set, or the directory name for multiple list. PerM's mapping output files have the ext name "*.mapping"; the unmapped reads output file have the "miss.fa" ext name. 
 
 In the example, PerM will report only the uniquely mapped reads within three mismatches in their first 32 bases. It will save the indexes for future mappings. 
 
