--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -27,7 +27,7 @@ The following are the short description for each arguments:
  * *-u*     Print the fasta file of those unmapped reads to a file *miss.fa.
  * *-T L*, where L is an integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
 Ex: {{{./PerM ref.fasta reads.csfasta 3 -E -s -T 32}}}
- * -O P*, where P is the prefix of the output file for single read set, or the directory name for multiple list. PerM's mapping output files have the ext name "*.mapping"; the unmapped reads output file have the .miss.fa ext name. 
+ * *-O P*, where P is the prefix of the output file for single read set, or the directory name for multiple list. PerM's mapping output files have the ext name "*.mapping"; the unmapped reads output file have the .miss.fa ext name. 
 
 In the example, PerM will report only the uniquely mapped reads within three mismatches in their first 32 bases. It will save the indexes for future mappings. 
 
