--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -24,7 +24,7 @@ The following are the short description for each arguments:
  * *-E*     Output only the unique mapped reads.
  * *-s*     Save the reference index to accelerate the mapping in the future.
  * *-m*     Create the reference index, without reusing the saved index.
- * *-u*     Print the fasta file of those unmapped reads to a file *miss.fa.
+ * *-u*     Print the fasta file of those unmapped reads to a file .miss.fa.
  * *-T L*, where L is an integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
 Ex: {{{./PerM ref.fasta reads.csfasta 3 -E -s -T 32}}}
  * *-O P*, where P is the prefix of the output file for single read set, or the directory name for multiple list. PerM's mapping output files have the ext name "*.mapping"; the unmapped reads output file have the .miss.fa ext name. 
