--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -2,16 +2,22 @@
 If you have any usage question, please email "yanghoch at usc.edu".
 
 = Compile =
-Download and unzip the source code. (Type unzip ./PerM\ 0.1.5\ GCC.zip in linux) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.3 or later. Type *gcc -v* to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
+Download and unzip the source code. (Type unzip ./PerM\ 0.1.7\ GCC.zip in linux) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.3 or later. Type *gcc -v* to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
 
+== SYNOPSIS ==  
+To use the command line, type PerM with the args in the order.
+(1) reference file (2) read set (3) option flags
+ * {{{./PerM Ref.fasta SingleEndReads.fasta 5 -E }}}
+ * {{{./PerM Ref.fasta SingleEndReads.csfasta 5 -m -s}}}
+ * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt 3 -u unmappedReads.fa }}}
+ * {{{./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -m -s -o out.sam}}}
 == Command Line Options ==  
-From version 0.1.4, We decided to use command line option only, instead of a configuration file. To use the command line, type PerM with the args in the order.
-(1) reference file (2) read set (3) mismatch threshold (4) option flags
 
 For example:
  * {{{./PerM Ref.fasta Reads.fasta 5 -A}}}
  * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt 2 -E }}}
-PerM chooses different ways to parse input files based on their ext names.
+PerM chooses different ways to parse input files based on their ext names. The forma
+
 The following are the short description for each arguments:
  # The reference file should be a .fasta or .fa file. If there are multiple reference list, ex: chr1.fa to chrY.fa, list them in a .txt file. PerM parses a file according to it's ext file name.
  # The reads file should be in the .fasta, .fastq, .csfasta or .prb format. PerM parses a file according to it's ext file name. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
@@ -19,14 +25,21 @@ The following are the short description for each arguments:
  # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
  * *-A*     Output all alignments within the mismatch threshold.
  * *-E*     Output only the unique mapped reads.
- * *-s*     Save the reference index to accelerate the mapping in the future.
  * *-m*     Create the reference index, without reusing the saved index.
- * *-u*     Print the fasta file of those unmapped reads to a file .miss.fa.
- * *-T L*, where L is an integer to truncate read length, say 30 means use only first 30 bases (signals). Don't put the number if the full read is meant to be used.
- * *-O P*, where P is the prefix of the output file for single read set, or the directory name for multiple list. PerM's mapping output files have the ext name ".mapping"; the unmapped reads output file have the .miss.fa ext name. 
-Ex: {{{./PerM ref.fasta reads.csfasta 3 -E -s -T 36 -O out -u}}}
+ * *-s*     Save the reference index to accelerate the mapping in the future.
+ * *-T I*, where L is an integer to truncate read length, say 30 means use only first 30 
+bases (signals). Don't put the number if the full read is meant to be used.
+ * *-o P*, where P is the the output path for one read set
+ * *-d P*, where P is the the output dir for multip read set
+ * *-u P*, Print the fasta(fastq) file of those unmapped reads to a file
+ * *--ignoreQS* Ignore the quality scores in fastq or QUAL files.
+ * *--seed {F2 | S11 | F3 | F4}* Use the specified seed pattern.
+ * *--readFormat {fasta | fastq | csfasta | csfastq}*. Read in reads in the specified format, instead of gussing according to the ext name.
 
-In the example, PerM will report only the uniquely mapped reads within three mismatches in their first 36 bases. It will save the indexes for future mappings. It will output the result to the file "out.mapping" and also report the unmapped reads to the file "out.miss.fa"
+Ex:  ./PerM Ref.fa Reads.fa -v 5 -E -T 36 -m -s -o out.sam
+PerM will report only the uniquely mapped reads within 5 mismatches in the first 36 bases.
+PerM will reconstruct and save the indexes to the default path for future mappings.
+PerM will output the mappings file to out.sam in the sam format.
 
 The following is some detail description for each argument. 
 ====Reference Files====
@@ -39,11 +52,6 @@ For SOLiD reads, PerM will try to read the quality file with the same base name 
 If quality score file is not available, or the reads and quality scores can't be matched, only the read sequences will be used. 
 
 (Tips! Use our shell splitReads.sh to split fasta or csfasta file into one million reads per set. It will generate a list file. Use the list file name as the input ptr of PerM.) 
-
-====Full Sensitivity Thresholds====
-PerM supports full sensitivity for 2, 3, or 4 mismatches as well as sensitivity thresholds specific to the SOLiD sequencer which changes consecutive colors in the presence of a SNP.  The SOLiD specific sensitivity thresholds of  "one SNP candidate + 1 color error" and "two SNP candidates" are denoted as *11* and *20*.  
-Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 11 -E}}}
-PerM outputs alignments with higher number of mismatches, when 5, 6 or 7 are set in this parameter, although no full sensitivity are guaranteed.
 
 ====Include or Exclude Ambiguous Mapping====
 The default setting will exclude the output of ambiguous reads. Use "-A" flag as the forth parameter to output all mappings. In this case, a maximum 100 mapping per read will be print consecutively in the output file. 
@@ -69,7 +77,6 @@ Each line is the result of a qualified mapping. The info in each line is read in
   * Reads qualities, numbers printed in characters with a Illimina Quality score shift 
 ==Unmapped reads==
   PerM output the un-maped reads to a .miss.fa file when -u option is specified. 
-
 
 = Paralleled Mapping =
 PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each CPU a read set, if available. If a read set is finished, the next read set in the list will be assigned to the available CPU automatically. Each read set will have its own output file `*`.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
