--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,7 +1,7 @@
 #labels Featured
 If you have any usage question, please email "yanghoch at usc.edu".
 = Compile =
-Download and unzip the source code. (Type unzip ./PerM\ 0.1.7\ GCC.zip in linux) in the directory with the download). For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.3 or later. Type *gcc -v* to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
+Download and unzip the source code. (Type unzip ./PerM_0.1.7_GCC.zip in linux) in the directory with the download. For Linux and gcc user, type make in the unzip directory to generate the execute file ./PerM. Note, the attached make file is for linux with gcc 4.3 or later. Type *gcc -v* to check your compiler version. Because OpenMP are supported after gcc 4.3, if your compiler is earlier version, use an alternative makefile (no openMP) with the flag "-fopenmp" removed, and only single CPU will be utilized. The code has also been test with visual c++ on a Win32 machine, without "openmp". 
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
@@ -12,8 +12,8 @@ To use the command line, type PerM with the args in the order.
  * {{{./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -m -s -o out.sam}}}
 == Command Line Options ==  
 The following are the short description for each arguments:
- # The reference file should be a .fasta or .fa file. If there are multiple reference list, ex: chr1.fa to chrY.fa, list them in a .txt file. PerM parses a file according to it's ext file name.
- # The reads file should be in the .fasta, .fastq, .csfasta or .prb format. PerM parses a file according to it's ext file name. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
+ # The reference file should be a .fasta or .fa file. For transcriptom with multiple genes or isoforms as reference, put concatenate all fasta in a fasta file. Or, if there are many files, one for each chromosome, ex: chr1.fa to chrY.fa, list them in a .txt file. PerM parses a file according to it's ext file name. 
+ # The reads file should be in the .fasta, .fastq, .csfasta format. PerM parses a file according to it's ext file name, or the format specified by flag *--format <format>*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
  # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
  # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
  * *-A*     Output all alignments within the mismatch threshold.
@@ -21,8 +21,8 @@ The following are the short description for each arguments:
  * *-E*     Output only the unique mapped reads. 
  * *-m*     Create the reference index, without reusing the saved index.
  * *-s*     Save the reference index to accelerate the mapping in the future.
- * *-v I*   Number of mismatches allowed in one end.
- * *-T I*, where L is an integer to truncate read length, say 30 means use only first 30 
+ * *-v I*  where I i the number of mismatches allowed in one end.
+ * *-T I*, where I is tbe length to truncate read length, say 30 means use only first 30 
 bases (signals). Don't put the number if the full read is meant to be used.
  * *-o P*, where P is the the output path for one read set
  * *-d P*, where P is the the output dir for multip read set
@@ -43,24 +43,26 @@ PerM takes single or multiple fasta files as the reference. If there are multipl
 ====Read Files====
 PerM expects reads from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file. 
 
-For SOLiD reads, PerM will try to read the quality file with the same base name as the read set, however with the ext name ".qual". That is, if the read file name is 7B.csfasta, its quality file "7B.qual" should be put beside.
+For SOLiD reads in csfasta format, PerM will try to read the file with the same base name as the read set, however with the ext name ".qual" for quality score. That is, if the read file name is 7B.csfasta, its quality file "7B.qual" should be put beside.
 If quality score file is not available, or the reads and quality scores can't be matched, only the read sequences will be used. 
 
 (Tips! Use our shell splitReads.sh to split fasta or csfasta file into one million reads per set. It will generate a list file. Use the list file name as the input ptr of PerM.) 
 
 ====Include or Exclude Ambiguous Mapping====
-The default setting will exclude the output of ambiguous reads. Use "-A" flag as the forth parameter to output all mappings. In this case, a maximum 100 mapping per read will be print consecutively in the output file. 
+The default setting will print the best alignments for each read in term of misamtches number. Use "-E" to exclude the reads has multiple "best" alignments. Use "-A" flag if all alignments within substitution threshold are meant to be printed. A maximum 100 mapping per read will be print consecutively in the output file. 
 
 =Output=
 The summary of the mapping results are printed directly to the screen. They include the  number of reads mapped with each number of mismatches and the running time of each step. 
-One can "grep" the summary info by redirect the standard output. 
+use " | tee mapping.log" to get the summary and "grep" for the statistics. 
+
 ==Index==
 The genome-preprocessing version saves the reference index by default. It requires 4.5 bytes (one integer + 4 bits) + 256M memory for mapping. As always, the memory and disk should have enough capacity. 
+
 ==Mapping Results==
-PerM (version 0.1.7) can output in SAM format, by specify the flag -o `*`.sam. 
+PerM (version 0.1.7) can output in SAM format, by specify the flag -o `*`.sam.
 For more information about sam format, check _http://samtools.sourceforge.net/_
-The original output format of single read the mapping results are `*`.mapping. 
-Each line is the result of a qualified mapping. The info in each line is read in the following order separated by tab:
+
+The original output format of has the ext name `*`.mapping. For single end read, each line is the result of a qualified mapping. The info in each line is read in the following order separated by tab:
   * Read Tag (Extract from the previous line of the reads input file. If the tag is missing, a fake tag will be used.)  
   * The read sequence. For SOLiD reads, the first base from the agent (not in the reference) is eliminated from display. The first color signal is translated into a base for display.
   * Chromosome Name or ID (begins at 0 and numbered according to the order in the reference list)
@@ -70,9 +72,6 @@ Each line is the result of a qualified mapping. The info in each line is read in
   * Number of mismatches or the mismatches score (the sum of quality scores in the mis-matched bases) if available. 
   * Number of mappings that this read aligns to, including the current one. 
   * Reads qualities, numbers printed in characters with a Illimina Quality score shift 
-==Unmapped reads==
-  PerM output the un-maped reads to a .miss.fa file when -u option is specified. 
-
 = Paralleled Mapping =
 PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each CPU a read set, if available. If a read set is finished, the next read set in the list will be assigned to the available CPU automatically. Each read set will have its own output file `*`.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
 When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
@@ -93,7 +92,7 @@ Or, specified with the command line for a paired read files:
 -U I   mate-paired separate upper bound, 
 -o P   where P is the path (single paired read set) or the directory (multiple paired read sets)
 The default is set as -L 0 -U 3000
-The upperbound and lowerbound can be negative, which may catch the re-arangement variations.
+The upper bound and lower bound can be negative, which may catch the re-arangement variations.
 Ex:  ./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -m -s -o out.sam.
 PerM will report only the non-ambiguous mate pair in the range of [200bp, 500bp]
 PerM will reconstruct and save the indexes to the default path for future mappings.
