--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -5,28 +5,30 @@ Download and unzip the source code. (Type unzip ./PerM_0.1.9_GCC.zip in linux) i
 
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
-(1) reference file (2) read set (3) option flags
+For single end read: PerM <Ref> <Reads> [options]
  * {{{./PerM Ref.fasta SingleEndReads.fasta -v 5 }}}
  * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -u unmappedReads.fa -E }}}
  * {{{./PerM Ref.fasta SingleEndReads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}}
  * {{{./PerM my.index SingleEndReads.csfasta -v 5}}} 
- * {{{./PerM ref.txt -1 F3.fq -2 R3.fq -U 3000 -L 100 -v 5 -A -m -s -o out.sam}}}
+For paired end read: PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options]
+ * {{{./PerM ref.fa -1 F3.fa -2 R3.fa -U 3000 -L 100 -v 5 -A -m -s -o out.sam}}}
+ * {{{./PerM ref.txt -1 F3.fq -2 R3.fq -v 5 -m -s my.index -o out.mapping --seed F3}}}
  * {{{./PerM my.index -1 F3.fq -2 R3.fq -U 3000 -L 100 -v 5 -A -o out.sam}}}
 == Command Line Options ==  
 The following are the short description for each arguments:
- # The reference file should be a .fasta or .fa file. For transcriptom with multiple genes or isoforms as reference, put concatenate all fasta in a fasta file. Or, if there are many files, one for each chromosome, ex: chr1.fa to chrY.fa, list them in a .txt file. PerM parses a file according to it's ext file name. 
- # The reads file should be in the .fasta, .fastq, .csfasta format. PerM parses a file according to it's ext file name, or the format specified by flag *--format <format>*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
+ # The reference file should be in fasta format with the corresponding ext name ex: .fasta, .fna. or .fa. For transcriptom with multiple genes or isoforms as reference, concatenate all fasta in a fasta file. Or, if there are many files, one for each chromosome, ex: chr1.fa to chrY.fa, list them in a .txt file, so PerM knows it is a file listing the path of multiple fasta file.  
+ # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *--format <format>*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
  # Mismatch threshold could be a integer 2 to 5. For reads over 64, PerM allows double the number of mismatches than the given threshold.
  # Options: By default, PerM outputs all the best alignments in terms of the mismatches number with in the threshold, end-to-end. It will try to use the saved indexes. If not found, reconstruct the indexes. The following option flags can change the default settings.
  * *-A*     Output all alignments within the mismatch threshold.
  * *-B*     Output best alignments in terms of mismatches in the threshold.(Default) 
  * *-E*     Output only the unique mapped reads. 
  * *-m*     Create the reference index, without reusing the saved index.
- * *-s*     Save the reference index to accelerate the mapping in the future.
+ * *-s P*     Save the reference index to accelerate the mapping in the future. If path P is not specify, the default path will be used. 
  * *-v I*  where I i the number of mismatches allowed in one end.
  * *-T I*, where I is tbe length to truncate read length, say 30 means use only first 30 
 bases (signals). Don't put the number if the full read is meant to be used.
- * *-o P*, where P is the the output path for one read set
+ * *-o P*, where P is the the output path for one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. 
  * *-d P*, where P is the the output dir for multip read set
  * *-u P*, Print the fasta(fastq) file of those unmapped reads to a file
  * *--ignoreQS* Ignore the quality scores in fastq or QUAL files.
@@ -64,8 +66,12 @@ After version 0.1.8, PerM save references sequence in binary in the index. It re
 ==Mapping Results==
 PerM (version 0.1.7) can output in SAM format, by specify the flag -o `*`.sam.
 For more information about sam format, check http://samtools.sourceforge.net/
+User can do the down stream analysis using samtools. 
 
-The original output format of has the ext name `*`.mapping. For single end read, each line is the result of a qualified mapping. The info in each line is read in the following order separated by tab:
+The original output format of has the ext name `*`.mapping. 
+
+For single end read, each line is the result of a qualified mapping. 
+The info in each line is read in the following order separated by tab:
   * Read Tag (Extract from the previous line of the reads input file. If the tag is missing, a fake tag will be used.)  
   * The read sequence. For SOLiD reads, the first base from the agent (not in the reference) is eliminated from display. The first color signal is translated into a base for display.
   * Chromosome Name or ID (begins at 0 and numbered according to the order in the reference list)
@@ -75,7 +81,8 @@ The original output format of has the ext name `*`.mapping. For single end read,
   * Number of mismatches or the mismatches score (the sum of quality scores in the mis-matched bases) if available. 
   * Number of mappings that this read aligns to, including the current one. 
   * Reads qualities, numbers printed in characters with a Illimina Quality score shift 
-= Paralleled Mapping =
+
+= Single End Paralleled Mapping =
 PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each CPU a read set, if available. If a read set is finished, the next read set in the list will be assigned to the available CPU automatically. Each read set will have its own output file `*`.mapping. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
 When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
 
@@ -88,7 +95,7 @@ PerM takes two format of the paired end reads.
 For input format (1), each file name should be listed in a row as single-end read file. 
 For input format (2), the two paired files can be specified in a list, with each row having two files path, separated by . Ex: reads_F3.csfasta \t reads_R3.csfasta. 
 Or, specified with the command line for a paired read files:
-./PerM <reference or index path> -1 <forward reads path> -2 <reverse reads path> <-flag options>
+./PerM <reference or index path> -1 <forward reads path> -2 <reverse reads path> [-flag options]
 (4)  Options for mate-paired reads:
 -e     Exclude ambiguous paired. 
 -L I   mate-paired separate lower bound
